--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,11 +1,12 @@
 .footer {
+    grid-column: 1;
     display: flex;
     height: 100px;
     align-items: center;
     justify-content: space-between;
     position: absolute;
     bottom: 0;
-    width: 99%;
+    width: 100%;
     background-color: #333;
     background-color: rgb(24, 24, 24);
     text-align: center;
