--- a/src/assets/styles/cmps/MainNav.scss
+++ b/src/assets/styles/cmps/MainNav.scss
@@ -2,10 +2,11 @@ $primary-color: #fff;
 $secondary-color: #aaa;
 
 .main-nav {
-    min-width: 150px;
+    max-width: 100%;
+
     background-color: black;
     color: rgb(224, 224, 224);
-    margin-block-end: 0px;
+    margin-block-end: 0;
     padding-inline-start: 20px;
     padding-inline-end: 20px;
     grid-row: 1 / 5;
@@ -19,7 +20,6 @@ $secondary-color: #aaa;
         color: rgb(215, 215, 215);
         font-size: 0.7rem;
         margin-block-end: 15px;
-
         &:hover {
             color: white;
             text-decoration: none;
