--- a/src/assets/styles/cmps/StationList.scss
+++ b/src/assets/styles/cmps/StationList.scss
@@ -1,5 +1,7 @@
 
 .station-list-top-content-container {
+	padding: 0px;
+
 	padding-inline-start: 12px;
 	padding-inline-end: 6px;
 	// background-color: #181818;
@@ -39,8 +41,24 @@
 
 .station-list {
 	// background-color: #181818;
+	padding: 0;
+overflow-x: hidden;
+	overflow-y: hidden;
     display: grid;
 	gap: 24px;
 	column-gap: 1.5em;
     grid-template-columns: repeat(auto-fill,minmax(0,220px));
+}
+
+::-webkit-scrollbar{
+    background: transparent;
+	width: 0.5em;
+}
+::-webkit-scrollbar-thumb{
+    background: #7c7b7bab;
+    border-radius: 6px;
+	&:hover{
+		
+		background: #7c7b7bf5;
+	}
 }
